--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @plugin "daisyui" {
-  themes: aqua --default, aqua --prefersdark, aqua;
+  themes: corporate --default, corporate --prefersdark, corporate;
 }
 
 /*
@@ -39,4 +39,4 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-} */
+}*/
